{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 105,
  "lineage": "aaaad5c0-a0a4-b827-d2b3-4668ed3f0436",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-047409a9bc1ef6d6c",
            "arn": "arn:aws:ec2:us-east-1:058935250212:elastic-ip/eipalloc-047409a9bc1ef6d6c",
            "domain": "vpc",
            "id": "eipalloc-047409a9bc1ef6d6c",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-200-239-217.compute-1.amazonaws.com",
            "public_ip": "52.200.239.217",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "capstone-nat-eip"
            },
            "tags_all": {
              "Name": "capstone-nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03deb8c961063af8c",
            "arn": "arn:aws:ec2:us-east-1:058935250212:instance/i-070ad4ffd0d7c8587",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-070ad4ffd0d7c8587",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "netrika-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0fc8c4e074f5712ce"
              }
            ],
            "primary_network_interface_id": "eni-0fc8c4e074f5712ce",
            "private_dns": "ip-10-0-1-14.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.14",
            "public_dns": "ec2-3-86-227-252.compute-1.amazonaws.com",
            "public_ip": "3.86.227.252",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b3912c524cc31a13",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a6de9cedc1192627",
            "tags": {
              "Name": "capstone-app"
            },
            "tags_all": {
              "Name": "capstone-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c6451ea7e099b16e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058935250212",
            "id": "i-070ad4ffd0d7c8587",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.web_sg",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.local_file.pubkey"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tools",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03deb8c961063af8c",
            "arn": "arn:aws:ec2:us-east-1:058935250212:instance/i-0837dbef7664044a3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0837dbef7664044a3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "netrika-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-051bb083c45102dbb"
              }
            ],
            "primary_network_interface_id": "eni-051bb083c45102dbb",
            "private_dns": "ip-10-0-2-112.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.112",
            "public_dns": "ec2-54-227-123-100.compute-1.amazonaws.com",
            "public_ip": "54.227.123.100",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0071ad137f30b543f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a497a4922d248ec5",
            "tags": {
              "Name": "capstone-tools"
            },
            "tags_all": {
              "Name": "capstone-tools"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c6451ea7e099b16e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058935250212",
            "id": "i-0837dbef7664044a3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.web_sg",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.local_file.pubkey"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058935250212:internet-gateway/igw-07583e1a6606e3572",
            "id": "igw-07583e1a6606e3572",
            "owner_id": "058935250212",
            "region": "us-east-1",
            "tags": {
              "Name": "capstone-igw"
            },
            "tags_all": {
              "Name": "capstone-igw"
            },
            "vpc_id": "vpc-0286bbba1d3bbb98b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-047409a9bc1ef6d6c",
            "association_id": "eipassoc-0896ac4596fbf4ce5",
            "connectivity_type": "public",
            "id": "nat-005fa1670ba67094a",
            "network_interface_id": "eni-09314320041856c90",
            "private_ip": "10.0.1.103",
            "public_ip": "52.200.239.217",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a6de9cedc1192627",
            "tags": {
              "Name": "capstone-natgw"
            },
            "tags_all": {
              "Name": "capstone-natgw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058935250212:route-table/rtb-01a91113961737f68",
            "id": "rtb-01a91113961737f68",
            "owner_id": "058935250212",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-005fa1670ba67094a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "capstone-private-rt"
            },
            "tags_all": {
              "Name": "capstone-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0286bbba1d3bbb98b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058935250212",
            "id": "rtb-01a91113961737f68",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.natgw",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058935250212:route-table/rtb-08d46630e66e087df",
            "id": "rtb-08d46630e66e087df",
            "owner_id": "058935250212",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07583e1a6606e3572",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "capstone-public-rt"
            },
            "tags_all": {
              "Name": "capstone-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0286bbba1d3bbb98b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058935250212",
            "id": "rtb-08d46630e66e087df",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd4817bdf6184245",
            "region": "us-east-1",
            "route_table_id": "rtb-01a91113961737f68",
            "subnet_id": "subnet-023bfb5c3f80c3f8b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_subnet.private_1",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007b7a2a42891ddc4",
            "region": "us-east-1",
            "route_table_id": "rtb-01a91113961737f68",
            "subnet_id": "subnet-080dcce0408bd417f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_subnet.private_2",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0442560f1c5f0fbe2",
            "region": "us-east-1",
            "route_table_id": "rtb-08d46630e66e087df",
            "subnet_id": "subnet-0a6de9cedc1192627"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0175aff91c6388d3b",
            "region": "us-east-1",
            "route_table_id": "rtb-08d46630e66e087df",
            "subnet_id": "subnet-0a497a4922d248ec5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058935250212:security-group/sg-0c6451ea7e099b16e",
            "description": "Allow SSH and HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c6451ea7e099b16e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "capstone-web-sg",
            "name_prefix": "",
            "owner_id": "058935250212",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "capstone-sg"
            },
            "tags_all": {
              "Name": "capstone-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0286bbba1d3bbb98b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058935250212",
            "id": "sg-0c6451ea7e099b16e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058935250212:subnet/subnet-023bfb5c3f80c3f8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023bfb5c3f80c3f8b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058935250212",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "capstone-private-1"
            },
            "tags_all": {
              "Name": "capstone-private-1"
            },
            "vpc_id": "vpc-0286bbba1d3bbb98b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058935250212",
            "id": "subnet-023bfb5c3f80c3f8b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058935250212:subnet/subnet-080dcce0408bd417f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080dcce0408bd417f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058935250212",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "capstone-private-2"
            },
            "tags_all": {
              "Name": "capstone-private-2"
            },
            "vpc_id": "vpc-0286bbba1d3bbb98b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058935250212",
            "id": "subnet-080dcce0408bd417f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058935250212:subnet/subnet-0a6de9cedc1192627",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6de9cedc1192627",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058935250212",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "capstone-public-1"
            },
            "tags_all": {
              "Name": "capstone-public-1"
            },
            "vpc_id": "vpc-0286bbba1d3bbb98b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058935250212",
            "id": "subnet-0a6de9cedc1192627",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058935250212:subnet/subnet-0a497a4922d248ec5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a497a4922d248ec5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058935250212",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "capstone-public-2"
            },
            "tags_all": {
              "Name": "capstone-public-2"
            },
            "vpc_id": "vpc-0286bbba1d3bbb98b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058935250212",
            "id": "subnet-0a497a4922d248ec5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058935250212:vpc/vpc-0286bbba1d3bbb98b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0411591ad023a31aa",
            "default_route_table_id": "rtb-04ffcb48346384d04",
            "default_security_group_id": "sg-04a274f3a1cdf3297",
            "dhcp_options_id": "dopt-0a2d494509a8672a8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0286bbba1d3bbb98b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04ffcb48346384d04",
            "owner_id": "058935250212",
            "region": "us-east-1",
            "tags": {
              "Name": "capstone-vpc"
            },
            "tags_all": {
              "Name": "capstone-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058935250212",
            "id": "vpc-0286bbba1d3bbb98b",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}